# vopros-AI

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __main__.py
src/adapters/: chat_repository.py  telegram_bot.py  telegram_client.py
src/config/: logger.py  settings.py
src/models/: chat.py  question.py  sent_question.py
src/repositories/: base.py  chat_repository.py  sent_question_repository.py
src/services/: ai_analyzer.py  question_filter.py  telegram_monitor_service.py
